# dynamixel

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/dynamixel/: api.h  crc.h  dynamixel.h  dynamixel_bus.h  dynamixel_error.h  protocol.h
priv_include/dynamixel/: api.h  protocol.h
src/: CMakeLists.txt  api.c  crc.c  dynamixel.c  dynamixel_bus.c  protocol.c
tests/: CMakeLists.txt  api_TEST.cc  dynamixel_TEST.cc  dynamixel_bus_TEST.cc  protocol_TEST.cc
